Q1 erste Uebung Grafiken nebeneinander, E Phase Code erneuert

--- a/E-Phase/Übung 1.tex
+++ b/E-Phase/Übung 1.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \Kopfzeile{Mathematik\\ Einführungsphase}{1}{Funktionen, Differentialquotient und Kurvendiskussion}{}
 
-\AbschnittV{1}{Lineare Funktionen}
+\AbschnittV{Lineare Funktionen}
 	\begin{itemize}
 		\item[a)] Stellen Sie folgende Funktionsgleichungen in einem geeigneten Koordinatensystem grafisch dar.
 		\begin{equation*}
@@ -11,9 +11,9 @@
 		\end{equation*}
 		\item[b)] Bestimmen Sie die Gleichungen der vier Geraden aus Abb.1.
 		%% includegraphics
-		\item[c)] Berechnen Sie die Schnittpunkte der Geraden $f$~und~$g$ sowie $h$~und~$j$
+		\item[c)] Berechnen Sie die Schnittpunkte der Geraden~$f$ und~$g$ sowie~$h$ und~$j$
 	\end{itemize}
-\AbschnittV{2}{Quadratische Funktionen}
+\AbschnittV{Quadratische Funktionen}
 	\begin{itemize}
 		\item[a)] Übertragen Sie die Gleichungen in die Scheitelpunktform und geben Sie den jeweiligen Scheitelpunkt an.
 		\begin{equation*}
@@ -43,7 +43,7 @@
 		\item[f)] Drei Probebohrungen nach einer erzführenden Schicht haben die in Abbildung 2 eingetragenen Tiefen ergeben. Wo kommt diese der Erdoberfläche vermutlich am nächsten?
 		%%%%includegraphic
 	\end{itemize}
-\AbschnittV{3}{Polynome}
+\AbschnittV{Polynome}
 	\begin{itemize}
 		\item[a)] Berechnen Sie die Nullstellen der Funktionen. Bestimmen Sie die Intervalle, in denen die Funktionswerte positiv bzw. negativ sind. Skizzieren Sie beide Funktionen in ein geeignetes Koordinatensystem.
 		\begin{equation*}
@@ -59,13 +59,13 @@
 			\right.
 		\end{equation*}
 	\end{itemize}
-\Abschnitt{4}{Gemischte Aufgaben Funktionen und Mengen}
+\Abschnitt{Gemischte Aufgaben Funktionen und Mengen}
 	Bestimmen Sie jeweils die größtmöglichen Teilmengen von $\mathbb{R}$, die Definitions- und Bildmengen folgender Funktionen sein können. Skizzieren Sie die Funktionen dann jeweils mit dem gewählten Definitions- und Bildbereich in einem geeigneten Koordinatensystem.
 		\begin{alignat*}{3}
 			&\textnormal{a)}~f_1(x)= 10 \qquad &&\textnormal{b)}~f_2(x)= x^2 + 2 \qquad &&\textnormal{c)}~f_3(x)= x^3\\
 			&\textnormal{d)}~f_4(x)= \sqrt{x} &&\textnormal{e)}~f_5(x)= |x| - x &&
 		\end{alignat*}
-\Abschnitt{5}{Multiple Choice}
+\Abschnitt{Multiple Choice}
 		Von den folgenden Antworten ist jeweils genau eine richtig. Wählen Sie diese Antwort aus und begründen Sie Ihre Entscheidung kurz.
 		\begin{itemize}
 			\item[a)] Für $n \in \mathbb{N}$ gilt: $1+\sum_{i=1}^{2n+1}\left(-1\right)^i = 0$
@@ -86,7 +86,7 @@
 			
 			$\Box~ n= \left\{2k-1:~k \in \mathbb{Z}\right\}$
 		\end{itemize}
-\AbschnittV{6}{Differentialquotient, h-Methode}
+\AbschnittV{Differentialquotient, h-Methode}
 	\begin{itemize}
 		\item[a)] Bestimmen Sie die Ableitungsfunktion mit Hilfe des Differentialquotienten (h-Methode).
 		\begin{equation*}
@@ -111,7 +111,7 @@
 					(6) & \frac{1}{2\sqrt{x}}
 		\end{array}$}}
 	\end{itemize}
-\AbschnittV{7}{Differentiation}
+\AbschnittV{Differentiation}
 	\begin{itemize}
 		\item[a)] Bestimmen Sie jeweils die erste Ableitung.
 		\begin{alignat*}{2}
@@ -127,7 +127,7 @@
 		\item[d)] Wie kann man rechnerisch überprüfen, ob sich zwei Graphen berühren?
 		\item[e)] Gegeben sei die Funktion~$f(x)=\frac{1}{x^2}$. Ermitteln Sie die Funktionsgleichung der Tangente, die parallel zur Geraden~$y=\frac{1}{4}x-5$ verläuft.
 	\end{itemize}
-\AbschnittV{8}{Kurvendiskussion}
+\AbschnittV{Kurvendiskussion}
 \begin{itemize}
 	\item[a)] Untersuchen Sie die Funktion~$f(x)=x^3-3x^2-2x+6$ auf Symmetrie, Nullstellen, Extrema sowie Wendepunkte. Geben Sie das Verhalten für~$x\to \pm \infty$ an und skizzieren Sie den Graphen in ein geeignetes Koordinatensystem.
 	\item[b)] Die Ballonhülle eines Heißluftballons wird durch horizontale und vertikale Lastbänder, die in die Hülle eingenäht sind, stabilisiert. Die horizontalen Lastbänder verlaufen wie Fassringe rund um die Hülle. Die vertikalen Lastbänder laufen vom höchsten Punkt des Ballons seitlich herab bis zum runden Brennerrahmen, der oberhalb der Austrittsdüse des Brenners sitzt. Am Ballonäquator ist der Umfang des Ballons maximal.
