--- a/E-Phase/Übung 3.tex
+++ b/E-Phase/Übung 3.tex
@@ -1,12 +1,9 @@
-\documentclass[12pt, a4paper]{scrartcl}
 \input{layout.tex}
+\input{commands.tex}
 
 \begin{document}
-	\newcommand{\Thema}{Modellierung von Funktionen}
-	\Abschnitt
-	\ \\[-1cm]
-	\textbf{Aufgabe 1}
-	
+\Kopfzeile{Mathematik\\ Einführungsphase}{3}{Funktionen, Differentialquotient und Kurvendiskussion}{}
+	\Abschnitt{Funktionsgleichungen}
 	Bestimmen Sie die Funktionsgleichung ersten Grades
 	\begin{itemize}
 		\item[a)]
@@ -24,11 +21,7 @@
 		\item[a)]
 	\end{itemize}
 
-	\renewcommand{\Thema}{Ableitungen}
-	\Abschnitt
-	\ \\[-1cm]
-	\textbf{Aufgabe 1}
-	
+	\Abschnitt{Ableitungen}	
 	Bilden Sie jeweils die ersten drei Ableitungen
 	\begin{itemize}
 		\item[a)]
