--- a/Q1/Q1 1. Übung.tex
+++ b/Q1/Q1 1. Übung.tex
@@ -4,20 +4,12 @@
 \Kopfzeile{Mathematik\\Qualifikationsphase 1}{1}{Einführung in die Integralrechnung}{}
 \Abschnitt{Fläche unter Funktionen}
 Ermitteln Sie die Flächen unter den Funktionen in Abb.~$1$ sowie Abb.~$2$.
-\begin{figure}[h!]
-	\begin{center}
+\begin{figure}[h]
+	\centering
 		\def\svgwidth{0.3\textwidth}
-		\input{1_1_gleichfoermige_Bewegung.pdf_tex}
-		\caption{gleichförmige Bewegung}
-	\end{center}
-\end{figure}
-
-\begin{figure}[h!]
-	\begin{center}
+		\subfloat[gleichförmige Bewegung]{\input{1_1_gleichfoermige_Bewegung.pdf_tex}\label{Q111gleichfoermigeBewegung}}\hfil
 		\def\svgwidth{0.3\textwidth}
-		\input{1_2_gleichmaessig_beschleunigte_Bewegung.pdf_tex}
-		\caption{gleichmäßig beschleunigte Bewegung}
-	\end{center}
+		\subfloat[gleichmäßig beschleunigte Bewegung]{\input{1_2_gleichmaessig_beschleunigte_Bewegung.pdf_tex}\label{Q111gleichmaessigBeschleunigteBewegung}}
 \end{figure}
 
 \AbschnittV{Ober- und Untersumme/ Streifenmethode}
